# gpu-deconv

./: .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  dprint.json  environment.yml  pyproject.toml
src/: constant_noise_downsample_signal.py  fourier_no_noise_downsample_forcing.py  fourier_noise_downsample_signal.py  no_noise_downsample_forcing.py  noise_downsample_forcing.py  noise_downsample_signal.py
src/gpu_deconv/: extra.mplstyle  jgr.mplstyle  utils.py
src/gpu_deconv/generate/: constant_noise_downsample_signal.py  fourier_noise_downsample_signal.py  no_noise_downsample_forcing.py  noise_downsample_forcing.py  noise_downsample_signal.py
src/gpu_deconv/plotting/: analyse_forcing_sampling.py  compare_to_sajidah.py  test.py
tests/: __init__.py  test_sample_forcing.py
