[project]
name = "project"
description = "Sandbox where we run GPU deconvolution stuff."
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pre-commit>=3.8.0,<4", "pre-commit-hooks>=4.6.0,<5"]

[tool.pixi.dependencies]
python = "3.10.*"
cupy = ">=10,<11"
cudatoolkit = ">=11.8.0,<12"

[tool.pixi.project]
channels = ["conda-forge", "rapidsai", "nvidia"]
platforms = ["linux-64"]
[tool.pixi.pypi-dependencies]
numpy = "<2"
fppanalysis = { git = "https://github.com/uit-cosmo/fpp-analysis-tools" }
superposed-pulses = { git = "https://github.com/uit-cosmo/superposed-pulses" }

[tool.pixi.tasks]
all = { depends-on = ["script1", "script2", "script3", "script4", "script5", "script6"] }
script1 = { cmd = "python ./src/constant_noise_downsample_signal.py", env = { LD_LIBRARY_PATH = "/usr/lib/x86_64-linux-gnu/" }, inputs = ["src/constant_noise_downsample_signal.py"], outputs = ["assets/constant_noise_downsample_signal"] }
script2 = { cmd = "python ./src/fourier_no_noise_downsample_forcing.py", env = { LD_LIBRARY_PATH = "/usr/lib/x86_64-linux-gnu/" }, inputs = ["src/fourier_no_noise_downsample_forcing.py"], outputs = ["assets/no_noise_downsampled_forcing"] }
script3 = { cmd = "python ./src/fourier_noise_downsample_signal.py", env = { LD_LIBRARY_PATH = "/usr/lib/x86_64-linux-gnu/" }, inputs = ["src/fourier_noise_downsample_signal.py"], outputs = ["assets/fourier_noise_downsampled_signal"] }
script4 = { cmd = "python ./src/no_noise_downsample_forcing.py", env = { LD_LIBRARY_PATH = "/usr/lib/x86_64-linux-gnu/" }, inputs = ["src/no_noise_downsample_forcing.py"], outputs = ["assets/no_noise_downsampled_forcing"] }
script5 = { cmd = "python ./src/noise_downsample_forcing.py", env = { LD_LIBRARY_PATH = "/usr/lib/x86_64-linux-gnu/" }, inputs = ["src/noise_downsample_forcing.py"], outputs = ["assets/noise"] }
script6 = { cmd = "python ./src/noise_downsample_signal.py", env = { LD_LIBRARY_PATH = "/usr/lib/x86_64-linux-gnu/" }, inputs = ["src/noise_downsample_signal.py"], outputs = ["assets/noise_downsampled_signal_init"] }

[tool.pixi.feature.dev.dependencies]
ruff = "*"

[tool.pixi.environments]
default = ["dev"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  "*.pyi",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
# Files that were downloaded
extend-exclude = []
# Same as Black.
line-length = 88
# Assume Python 3.12
target-version = "py312"

[tool.ruff.format]
preview = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
preview = false
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# select = ["E4", "E7", "E9", "F"]  # These are the default
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
  "CPY001",
  "COM812",
  "E501", # Line too long
  "ERA001", # Uncommented code
  "ISC001",
  "T201", # `print` found
]
per-file-ignores = {}
select = [
  "ALL",
  # https://docs.astral.sh/ruff/rules/
]
unfixable = []

[tool.ruff.lint.flake8-import-conventions]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
"matplotlib.pyplot" = "plt"
numpy = "np"
scipy = "sp"
xarray = "xr"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true
known-local-folder = ["src", "vdd"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload"]
